[package]
name = "lohash"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
rand = "0.8.5"
serde = {version = "1.0.204", features = ['derive']}
tokio = { version = "1", features = ["full"] }
xxhash-rust = { version="0.8.11", features = ["xxh3", "const_xxh3"]}

[profile.release]
overflow-checks = true
